--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
 dependencies {
     compile 'se.emilsjolander:stickylistheaders:2.5.2'
+    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:20.0.0'
 }
